[UPDATE] fixing api and add new master api
